Changed build path

--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./build" # Path to your built React app (e.g., 'build' or 'dist')
+          path: "./dist" # Path to your built React app (e.g., 'build' or 'dist')
 
       - name: Deploy to GitHub Pages
         id: deployment
