Added token write permission

--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main # Or your primary branch
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write # Grant write permission for id-token
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
